--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
     font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
+/* navbar    */
 nav {
     display: flex;
     justify-content: left;
@@ -56,6 +57,7 @@ nav input {
     background-color: rgb(233, 236, 239);
 }
 
+/* main  */
 main {
     overflow-x: auto;
 }
@@ -84,9 +86,13 @@ main {
 
 #myTable {
     border-collapse: collapse;
-    border-spacing: 0;
     width: 100%;
 
+}
+
+#myTable thead tr th:first-child,
+#myTable tbody tr td:first-child {
+    width: 1em;
 }
 
 tr {
@@ -108,31 +114,19 @@ td {
     text-align: left;
 }
 
-/* Pagination  */
-/* .pagination {
+/* input images  */
+tr #tdImg {
     display: flex;
-    justify-content: center;
+    justify-content: left;
     align-items: center;
-    margin: 30px auto 20px;
+    width: 100%;
 }
 
-.pagination a {
-    color: black;
-    float: left;
-    padding: 8px 16px;
-    text-decoration: none;
-    border-radius: 5px;
+td img {
+    margin: auto 10px auto 0px;
 }
 
-.pagination a.active {
-    background-color: #2aa8da;
-    color: white;
-}
-
-.pagination a:hover:not(.active) {
-    background-color: #ddd;
-} */
-
+/* No of cities  */
 .pageData {
     display: flex;
     justify-content: center;
@@ -140,64 +134,41 @@ td {
     margin: 20px;
 }
 
-#pagination {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 20px;
-}
-
-#pagination button,
-#pagination span {
-    margin: 0 10px;
-    padding: 8px 16px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    font-size: 16px;
-    color: #333;
-    background-color: #fff;
-    cursor: pointer;
-}
-
-#pagination button:hover,
-#pagination button:focus {
-    background-color: #f1f1f1;
-}
-
-#pagination span {
-    font-weight: bold;
-    border: none;
-}
-
 /* errorMessage  */
 #errorDiv {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 200px auto;
-}
-
-#errorMessage {
-    font-size: 16px;
+    margin: 240px auto;
 }
 
 /* footer  */
-footer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.footer {
+    position: absolute;
+    right: 30px;
 }
 
 #noOfCities {
-    margin: 20px auto;
+    width: 50px;
+    text-align: center;
+    margin: 5px;
+    padding: 3px;
+    border: 1px solid #000;
+    border-radius: 4px;
+    outline: none;
+}
+
+#noOfCities:focus {
+    border: 1px solid #7952b3;
 }
 
 .cityData {
-    margin: 20px auto 30px auto;
+    text-align: right;
+    margin: 20px;
 }
 
-.divCities {
+.warningMessage {
     margin: auto;
     color: red;
-    text-align: center;
+    text-align: right;
 }
