--- a/style.css
+++ b/style.css
@@ -49,17 +49,37 @@ nav input {
     padding: 0px 4px;
     position: absolute;
     left: 225px;
-    cursor: pointer;
     background-color: rgb(255, 255, 255);
+    user-select: none;
+    outline: none;
 }
 
 .searchBtn:disabled {
     background-color: rgb(233, 236, 239);
 }
 
+.emptyMsg {
+    display: none;
+    color: red;
+}
+
+.emptyMessage {
+    display: flex;
+}
+
+.inputMsg {
+    display: none;
+    color: red;
+}
+
+.letterAndNumber {
+    display: flex;
+}
+
 /* main  */
 main {
     overflow-x: auto;
+    background-color: #e2e8f0;
 }
 
 /* Loader  */
@@ -71,6 +91,9 @@ main {
     height: 40px;
     margin: 10px auto;
     animation: spin 1.5s linear infinite;
+}
+
+.fade {
     display: none;
 }
 
@@ -86,8 +109,9 @@ main {
 
 #myTable {
     border-collapse: collapse;
-    width: 100%;
-
+    margin: 2em auto;
+    width: 95%;
+    background-color: white;
 }
 
 #myTable thead tr th:first-child,
@@ -114,6 +138,10 @@ td {
     text-align: left;
 }
 
+.hideMyTableBody {
+    display: none;
+}
+
 /* input images  */
 tr #tdImg {
     display: flex;
@@ -135,11 +163,23 @@ td img {
 }
 
 /* errorMessage  */
-#errorDiv {
+.errorDiv {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 240px auto;
+    margin: 1rem auto;
+}
+
+.hideErrorDiv {
+    display: none;
+}
+
+.errorMessage {
+    display: block;
+}
+
+.hideErrorMessage {
+    display: none;
 }
 
 /* footer  */
@@ -148,7 +188,7 @@ td img {
     right: 30px;
 }
 
-#noOfCities {
+.noOfCities {
     width: 50px;
     text-align: center;
     margin: 5px;
@@ -158,7 +198,7 @@ td img {
     outline: none;
 }
 
-#noOfCities:focus {
+.noOfCities:focus {
     border: 1px solid #7952b3;
 }
 
@@ -167,8 +207,17 @@ td img {
     margin: 20px;
 }
 
+.hideCityData {
+    display: none;
+}
+
 .warningMessage {
     margin: auto;
     color: red;
     text-align: right;
+    display: none;
+}
+
+.showWarningMessage {
+    display: block;
 }
