--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ main {
 
 #myTable {
     border-collapse: collapse;
-    margin: 2em auto;
+    margin: 3% auto;
     width: 95%;
     background-color: white;
 }
